libreoffice (1:6.1.0~alpha1~git20171216-1) UNRELEASED; urgency=medium

  * New upstream snapshot

 -- Rene Engelhard <rene@debian.org>  Tue, 07 Nov 2017 20:59:01 +0100

libreoffice (1:6.0.0~beta2-1) experimental; urgency=medium

  [ Rene Engelhard ]
  * New upstream beta release

  * debian/patches/apparmor-complain.diff: set complain mode for oosplash
    and soffice.bin profiles
  * debian/patches/sal-fix-kfreebsd-build.diff: add from gerrit
  * debian/patches/disable-gbuildtojson.diff: disable gbuildtojson and its
    tests. We don't need it and it fails now related to the gpg-agent files
    created by xmlsecurity_signing cppunit test which uses gpg...

  * debian/control.in: remove openjdk conflicts ...
  * debian/rules: ... and make them Depends in JAVA_RUNTIME_DEPENDS for the
    Java-using packages. Also allow openjdk-9 everywhere
  This doesn't prevent usage of the "broken" JDK but otherwise we "break"
  jodconverter/natbraille in testing... And linux 4.14.2-1 is also supposed to
  fix the regression finally...
  This also closes: #882436

  * debian/rules:
    - stop installing disabled symlinks for apparmor (closes: #883800)
    - actually install the OpenSymbol fontconfig snippet into a 
      /etc/fonts.d/30_opensymbol.conf
    - change BRAND_BASE_DIR in fundamentalrc so that we don't get
      /usr/lib/libreoffice/program/../program/xpdfimport calls. We know
      the path and the apparmor profile doesn't allow this
  * debian/libreoffice-common.bug-script.in: run aa-status
  * debian/control.in: add gnupg to Suggests

  [ intrigeri ]
  * debian/README.Debian: document how to debug and customize the included
    AppArmor profiles

 -- Rene Engelhard <rene@debian.org>  Sat, 09 Dec 2017 00:22:29 +0100

libreoffice (1:6.0.0~beta1-2) experimental; urgency=medium

  * debian/libreoffice-common.{triggers,postinst}.in,
    debian/shell-lib-lool.sh: add trigger updating LOOLs systemplate