@@ -4289,7 +4289,13 @@ Section: libs
 Architecture: all
 Depends: ${java:Depends}, ${misc:Depends}
 Description: LibreOffice java test libraries
- LibreOffice subsequentchecks integration test suite
+ Java libraries LibreOffice subsequentchecks integration test suite
+
+Package: libreoffice-smoketest-data
+Section: misc
+Architecture: all
+Description: data files for LibreOffices "smoketest"
+ Data files for the LibreOffice "smoketest".
 
 Package: libreoffice-librelogo
 Section: misc
