@@ -1,7 +1,0 @@
-Package: libreoffice-subsequentcheckbase
-Section: libs
-Architecture: all
-Depends: ${java:Depends}, ${misc:Depends}
-Description: LibreOffice java test libraries
- LibreOffice subsequentchecks integration test suite
-
