@@ -1,0 +1,13 @@
+Package: libreoffice-subsequentcheckbase
+Section: libs
+Architecture: all
+Depends: ${java:Depends}, ${misc:Depends}
+Description: LibreOffice java test libraries
+ Java libraries LibreOffice subsequentchecks integration test suite
+
+Package: libreoffice-smoketest-data
+Section: misc
+Architecture: all
+Description: data files for LibreOffices "smoketest"
+ Data files for the LibreOffice "smoketest".
+
