@@ -9,6 +9,16 @@ Tests: junit-subsequentcheck
 Depends: @builddeps@, libreoffice, libreoffice-subsequentcheckbase, libreoffice-sdbc-hsqldb
 Restrictions: allow-stderr
 
+# this is already done by smoketest upstream, but fails when doing it against
+# the installed LO. works standalone, though, so it's patched out of the
+# smoketest. Do it here separately.
+Tests: test-extension
+Depends: libreoffice-core, libreoffice-common, libreoffice-java-common, libreoffice-smoketest, default-jdk
+
+Tests: test-extension-shared
+Depends: libreoffice-core, libreoffice-common, libreoffice-java-common, libreoffice-smoketest, default-jdk
+Restrictions: needs-root
+
 Tests: odk-build-examples
 Depends: @builddeps@, libreoffice-dev, libreoffice-dev-doc, libreoffice-java-common, python3-uno, libreoffice-officebean
 Restrictions: allow-stderr
