@@ -1,0 +1,23 @@
+#!/bin/bash
+# autopkgtest check: Install a test extension shared
+# (c) 2017 Software in the Public Interest, Inc.
+# Authors: Rene Engelhard <rene@debian.org>
+
+set -e
+set -E
+
+tmpfile=`mktemp -q`
+
+# does it install fine?
+unopkg add --shared -v /usr/share/libreoffice/TestExtension.oxt
+
+# does it list? For whatever reason unopkg leaves a stale .lock behind when
+# doing this grep directly on the output so do it on a tmpfile
+unopkg list --shared | tee $tmpfile
+grep -q org.libreoffice.smoketest.TestExtension $tmpfile || exit 1
+rm $tmpfile
+
+# does it remove?
+unopkg remove --shared -v org.libreoffice.smoketest.TestExtension
+
+
