@@ -2,6 +2,12 @@ libreoffice (1:6.1.0~alpha1~git20171216-1) UNRELEASED; urgency=medium
 
   * New upstream snapshot
 
+  * debian/rules:
+    - install smoketestdoc.sxw and TestExtension.oxt into a new
+      libreoffice-smoketest package which can be used by autopkgtests
+  * debian/tests/*: add autopkgtest to test install TestExtension.oxt
+    (user and shared)
+
  -- Rene Engelhard <rene@debian.org>  Tue, 07 Nov 2017 20:59:01 +0100
 
 libreoffice (1:6.0.0~beta2-1) experimental; urgency=medium
